[gd_scene load_steps=4 format=4 uid="uid://bmsn14o8omkt0"]

[ext_resource type="Script" uid="uid://chch4q7tclhk4" path="res://Scripts/Misc/ConnectorLocator.gd" id="1_jrj6f"]
[ext_resource type="TileSet" uid="uid://d0cbsuev84gt8" path="res://Scripts/Resources/TileMap.tres" id="2_8ja5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jrj6f"]
size = Vector2(158, 62)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jrj6f")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAABAAIAAAABAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAACAAIAAAABAAEAAAADAAIAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAFAAIAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAJAAIAAAABAAEAAAAJAAEAAAABAAEAAAAAAAMAAAABAAQAAAABAAMAAAABAAQAAAACAAMAAAABAAQAAAADAAMAAAABAAQAAAAEAAMAAAABAAQAAAAFAAMAAAABAAQAAAAHAAMAAAABAAQAAAAGAAMAAAABAAQAAAAIAAMAAAABAAQAAAAJAAMAAAABAAQAAAA=")
tile_set = ExtResource("2_8ja5l")

[node name="LeftConnector" type="Marker2D" parent="."]
position = Vector2(0, 32)

[node name="RightConnector" type="Marker2D" parent="."]
position = Vector2(160, 32)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 32)
shape = SubResource("RectangleShape2D_jrj6f")
