[gd_scene load_steps=4 format=4 uid="uid://i6kj6nv4ngio"]

[ext_resource type="Script" uid="uid://chch4q7tclhk4" path="res://Scripts/Misc/ConnectorLocator.gd" id="1_7wkg2"]
[ext_resource type="TileSet" uid="uid://d0cbsuev84gt8" path="res://Scripts/Resources/TileMap.tres" id="2_snwyn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoxkv"]
size = Vector2(62, 158)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7wkg2")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAABAAAAAAABAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAADAAAAAAAJAAEAAAADAAEAAAAJAAEAAAADAAIAAAAJAAEAAAADAAMAAAAJAAEAAAADAAQAAAAJAAEAAAADAAUAAAAJAAEAAAADAAYAAAAJAAEAAAADAAcAAAAJAAEAAAADAAgAAAAJAAEAAAADAAkAAAAJAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAABAAkAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAABAAEAAAACAAYAAAABAAEAAAACAAUAAAABAAEAAAACAAQAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAA=")
tile_set = ExtResource("2_snwyn")

[node name="DownConnector" type="Marker2D" parent="."]
position = Vector2(32, 160)

[node name="UpConnector" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 80)
shape = SubResource("RectangleShape2D_yoxkv")
